tests/neg-custom-args/fatal-warnings/symbolic-packages.scala
package `with spaces` { // error
  class Foo
}

package +.* { // error // error
  class Bar
}

package object `mixed_*` { // error
  class Baz
}
